--- a/Baekjoon/16235.md
+++ b/Baekjoon/16235.md
@@ -38,15 +38,13 @@ public class Main {
 
 	public static void main(String[] args) {
 		Scanner sc = new Scanner(System.in);
-		// 땅의 크기 N*N
         N = sc.nextInt();
-        // 심어진 나무의 개수
 		int M = sc.nextInt();
-        // K년이 지난 후 나무의 개수를 출력
 		int K = sc.nextInt();
 		land = new int[N + 1][N + 1];
 		food = new int[N + 1][N + 1];
 		tree = new ArrayList<>();
+
         // 초기 땅에 있는 양분은 5
         // 겨울마다 추가되는 양분은 입력값으로 주어짐
 		for (int i = 1; i <= N; i++) {
@@ -100,7 +98,8 @@ public class Main {
 		ArrayList<Tree> newTree = new ArrayList<>();
 		for (Tree t : tree) {
             /*
-            처음에 이부분에서 t.alive를 확인하지 않아 다른 출력값이 도출되었다. tree에는 원래 살아있는 나무들만 있지만 spring메서드의 과정을 거치면서 죽은 나무가 발생할 수 있음
+            처음에 이부분에서 t.alive를 확인하지 않아 다른 출력값이 도출되었다.
+			tree에는 원래 살아있는 나무들만 있지만 spring메서드의 과정을 거치면서 죽은 나무가 발생할 수 있음
             */
 			if (t.alive && t.age % 5 == 0) {
 				for (int k = 0; k < x.length; k++) {
